# AMQP-CPP

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  Makefile.in  README.md  amqp.h  amqp.pc.in  amqpcpp.h  amqpcpp.pc.in  appveyor.yml  libamqp.h  meson.build  meson_options.txt  set_cxx_norm.cmake
.github/ISSUE_TEMPLATE/: bug_report.md
amqp_boost_test/: CMakeLists.txt  main.cpp
doc/: doxygen.cfg.in  meson.build
examples/: CMakeLists.txt  libboostasio.cpp  libboostasio_multithreading.cpp  libboostasio_ssl.cpp  libev.cpp  libuv_external.cpp
examples/boost/: Makefile  consumer.cpp  producer.cpp
examples/boost/1_hello_world/: consumer.cpp  producer.cpp
examples/boost/2_work_queues/: .worker.cpp.swp  Makefile  new_task.cpp  worker.cpp
examples/rabbitmq_tutorials/: CMakeLists.txt  asiohandler.cpp  asiohandler.h  emit_log.cpp  tools.h
include/: CMakeLists.txt  address.h  amqpcpp.h  array.h  booleanset.h  buffer.h  bytebuffer.h  callbacks.h  channel.h  channelhandler.h  channelimpl.h  classes.h  compat_endian.h  connection.h  connectionhandler.h  connectionimpl.h  copiedbuffer.h  decimalfield.h  deferred.h  deferredcancel.h  deferredconsumer.h  deferredconsumerbase.h  deferreddelete.h  deferredget.h  deferredqueue.h  endian.h  entityimpl.h  envelope.h  envelopefield.h  exchangetype.h  field.h  fieldproxy.h  flags.h  libboostasio.h  libev.h  libevent.h  libuv.h  login.h  meson.build  message.h  (+13 more)
include/amqpcpp/: address.h  addresses.h  array.h  authentication.h  booleanset.h  buffer.h  bytebuffer.h  callbacks.h  channel.h  channelimpl.h  classes.h  confirmed.h  connection.h  connectionhandler.h  connectionimpl.h  copiedbuffer.h  decimalfield.h  deferred.h  deferredcancel.h  deferredconfirm.h  deferredconfirmedpublish.h  deferredconsumer.h  deferredconsumerbase.h  deferreddelete.h  deferredextreceiver.h  deferredget.h  deferredpublish.h  deferredpublisher.h  deferredqueue.h  deferredrecall.h  deferredreceiver.h  endian.h  envelope.h  exchangetype.h  externalauth.h  field.h  fieldproxy.h  frame.h  inbuffer.h  libboostasio.h  (+22 more)
include/amqpcpp/linux_tcp/: tcpchannel.h  tcpconnection.h  tcphandler.h  tcpparent.h
integrations/boost/: boostnetworkhandler.h  boostreadbuffer.h  boostsslnetworkhandler.h  boostwritebuffer.h
integrations/boost/test/: Makefile  main.cpp  myconnection.cpp  myconnection.h
rabbitmq_tutorials/: CMakeLists.txt  README.md  asiohandler.cpp  asiohandler.h  emit_log_direct.cpp  emit_log_topic.cpp  new_task.cpp  receive.cpp  receive_logs.cpp  receive_logs_direct.cpp  receive_logs_topic.cpp  rpc_client.cpp  rpc_server.cpp  send.cpp  worker.cpp
src/: CMakeLists.txt  Makefile  addressinfo.h  array.cpp  basicackframe.h  basiccancelframe.h  basiccancelokframe.h  basicconsumeframe.h  basicconsumeokframe.h  basicdeliverframe.h  basicframe.h  basicgetemptyframe.h  basicgetframe.h  basicgetokframe.h  basicheaderframe.h  basicnackframe.h  basicpublishframe.h  basicqosframe.h  basicqosokframe.cpp  basicqosokframe.h  basicrecoverasyncframe.h  basicrecoverframe.h  basicrecoverokframe.h  basicrejectframe.h  basicreturnframe.h  bodyframe.h  buffercheck.h  channelcloseframe.cpp  channelcloseframe.h  channelcloseokframe.cpp  channelcloseokframe.h  channelflowokframe.cpp  channelflowokframe.h  channelframe.h  channelimpl.cpp  channelopenframe.h  channelopenokframe.cpp  channelopenokframe.h  confirmed.cpp  confirmframe.h  (+109 more)
src/linux_tcp/: CMakeLists.txt  address2str.h  addressinfo.h  connectionorder.h  function.h  includes.h  library.h  openssl.cpp  openssl.h  pipe.h  poll.h  sslconnected.h  sslcontext.h  sslerrorprinter.cpp  sslerrorprinter.h  sslhandshake.h  sslshutdown.h  sslwrapper.h  tcpclosed.h  tcpconnected.h  tcpconnection.cpp  tcpextstate.h  tcpinbuffer.h  tcpoutbuffer.h  tcpresolver.h  tcpsecurestate.h  tcpshutdown.h  tcpssl.h  tcpsslclose.h  tcpsslconnected.h  tcpsslcontext.h  tcpsslhandshake.h  tcpstate.h  wait.h
src/tcpconnection/: includes.h  tcpconnected.h  tcpconnection.cpp
subprojects/: .gitignore
tests/: .gitignore  Makefile  README.md  a.out  address.cpp  gt_address.cpp  gt_numericfield.cpp  inject.cpp  libboostasio.cpp  libev.cpp  lowlevel.cpp  main.cpp  meson.build  midlevel.cpp  myconnection.cpp  myconnection.h  rejectall.cpp  rejectall.py  test.cpp
tests/table/: table.cpp
win/: AMQP-CPP.vs2013.sln
win/libAMQP-CPP/: ReadMe.txt  libAMQP-CPP.vcxproj  libAMQP-CPP.vcxproj.filters
